[tool.poetry]
name = "planhat"
version = "0.1.0"
description = "Python client for Planhat API"
license = "MIT"
authors = ["Nick Allen <nick.allen.cse@gmail.com>"]
readme = 'README.md'
repository = "https://github.com/nick-allen/planhat-python"
homepage = "https://github.com/nick-allen/planhat-python"
keywords = ['planhat']

[tool.poetry.dependencies]
python = "~2.7 || ^3.2"
requests = { version = "^2.13", extras = [ "security" ] }
